--- a/src/components/AgencyLocation.astro
+++ b/src/components/AgencyLocation.astro
@@ -46,7 +46,11 @@ import Button from './subcomponents/Button.astro';
         >
       </div>
       <div class="flex flex-col gap-2">
-        <p class="font-larken text-3xl">travaillons ensemble, même à distance !</p>
+        <div class="flex flex-wrap font-larken text-3xl gap-2">
+          <p>travaillons ensemble,</p>
+          <p>même à distance !</p>
+        </div>
+
         <p>JOLILOT I AGENCE CRÉATIVE LOTOISE</p>
       </div>
       <div class="flex flex-col gap-6">
