--- a/src/components/AgencyOneService.astro
+++ b/src/components/AgencyOneService.astro
@@ -23,7 +23,7 @@ const { oneService } = Astro.props;
 ---
 
 <div class="flex flex-col gap-10 my-28">
-  <SubTitle title="des services, rien que pour vous !" />
+  <SubTitle title="des services,\n rien que pour vous !" />
   <div class="relative flex w-full flex-col items-center">
     <div class="grid w-full max-w-[1800px] grid-cols-1 gap-y-24 px-10 md:px-20 md:grid-cols-2 xl:grid-cols-3">
       <div class="flex gap-6 text-black/90 md:border-r border-black md:pr-12">
