--- a/src/components/TypingTitle.astro
+++ b/src/components/TypingTitle.astro
@@ -7,7 +7,7 @@ const { text = 'une communication qui fait sens' } = Astro.props;
 ---
 
 <div class="flex h-72 w-full items-center justify-center">
-  <p class="font-larken md:text-3xl text-xl font-light">{text}</p>
+  <p class="font-larken md:text-3xl text-xl font-light text-center">{text}</p>
 </div>
 
 <script>
