--- a/src/layouts/ScrollToTop.astro
+++ b/src/layouts/ScrollToTop.astro
@@ -1,6 +1,6 @@
 <div id="scrolltotop" class={`fixed bottom-6 right-6 z-20 transition-all opacity-100 hidden`}>
   <button
-    class="rounded-full border-current border p-3 transition-all hover:text-tertiary outline-black outline-1 hover:bg-orange"
+    class="rounded-full border-current border p-3 transition-all hover:text-tertiary outline-black outline-1"
     onclick="
     window.scrollTo({ top: 0, behavior: 'smooth' });
     "
