--- a/src/pages/a-propos.astro
+++ b/src/pages/a-propos.astro
@@ -87,7 +87,7 @@ const Steps: AgencyStepsProps = {
     <TypingTitle />
     <AgencyPresentation {...presentation} />
     <AgencyLocation />
-    <AgencySteps {...Steps} />
+    <AgencySteps {...Steps} submark={false} />
     <AgencyClientsNumber variant="light" zone="top" />
   </main>
 </Layout>
