--- a/src/pages/services/identite-visuelle.astro
+++ b/src/pages/services/identite-visuelle.astro
@@ -115,6 +115,7 @@ import Photo4 from '@assets/P.IDENTITÉ/Logo-min.jpg';
 import Photo5 from '@assets/P.IDENTITÉ/Logotype-min.jpg';
 import Photo6 from '@assets/P.IDENTITÉ/Refonte Identité Visuelle-min.jpg';
 import Photo7 from '@assets/P.IDENTITÉ/Graphisme-min.jpg';
+import AgencyContactUs from '@components/AgencyContactUs.astro';
 const PhotoCarrousel = [
   {
     image: Photo1,
@@ -154,6 +155,6 @@ const PhotoCarrousel = [
     <AgencyOneService oneService={oneService} />
     <AgencySteps {...Steps} />
     <PhotosCarrousel photos={PhotoCarrousel} />
-    <AgencyContactForm />
+    <AgencyContactUs />
   </main>
 </Layout>
