--- a/src/pages/services/site-web.astro
+++ b/src/pages/services/site-web.astro
@@ -120,6 +120,7 @@ import Photo4 from '@assets/P.WEB/Site OnePage-min.jpg';
 import Photo5 from '@assets/P.WEB/Site Vitrine-min.jpg';
 import Photo6 from '@assets/P.WEB/Site Web Responsive-min.jpg';
 import Photo7 from '@assets/P.WEB/Site Web-min.jpg';
+import AgencyContactUs from '@components/AgencyContactUs.astro';
 const PhotoCarrousel = [
   {
     image: Photo1,
@@ -159,6 +160,6 @@ const PhotoCarrousel = [
     <AgencyOneService oneService={oneService} />
     <AgencySteps {...Steps} />
     <PhotosCarrousel photos={PhotoCarrousel} />
-    <AgencyContactForm />
+    <AgencyContactUs />
   </main>
 </Layout>
