--- a/src/components/subcomponents/LogoWithProgressBar.astro
+++ b/src/components/subcomponents/LogoWithProgressBar.astro
@@ -37,9 +37,11 @@ const { color } = Astro.props;
   }
 </style>
 
-<script>
+<script is:inline>
+setup();
+function setup() {
   // Fonction de rappel pour l'intersection
-  function handleIntersection(entries: IntersectionObserverEntry[], observer: IntersectionObserver) {
+  function handleIntersection(entries, observer) {
     entries.forEach((entry) => {
       if (entry.isIntersecting) {
         entry.target.classList.add('animate');
@@ -58,4 +60,5 @@ const { color } = Astro.props;
   if (element) {
     observer.observe(element);
   }
+}
 </script>
