--- a/src/components/AgencyOneService.astro
+++ b/src/components/AgencyOneService.astro
@@ -34,7 +34,7 @@ const { oneService } = Astro.props;
           <div class="flex flex-col gap-0">
             {oneService.description.map((item) => <p class="font-poppins">{item}</p>)}
           </div>
-          <Button text="réserver un projet" variant="dark" url="#contact-form" />
+          <Button text="réserver un projet" variant="dark" url="/contact##contact-form" />
         </div>
       </div>
       {
@@ -53,7 +53,7 @@ const { oneService } = Astro.props;
                 <span class="font-normal text-base">{benefit.time}</span> à partir du lancement du projet
               </p>
             )}
-            <Button text="c’est ce qu’il me faut !" url="#contact-form" />
+            <Button text="c’est ce qu’il me faut !" url="/contact#contact-form" />
           </div>
         ))
       }
