Add px to contactUs

--- a/src/components/AgencyContactUs.astro
+++ b/src/components/AgencyContactUs.astro
@@ -1,4 +1,4 @@
-<div class={`py-40 flex flex-col items-center`}>
+<div class="py-40 flex flex-col items-center px-20">
   <div class="flex flex-col gap-y-8 max-w-md">
     <div class="text-4xl text-center flex gap-2 flex-wrap font-larken">
       <p>une question,</p>
