--- a/src/pages/services/site-web.astro
+++ b/src/pages/services/site-web.astro
@@ -155,7 +155,7 @@ const PhotoCarrousel = [
 
 <Layout>
   <main>
-    <TypingTitle text="votre présence digitale, une vitrine captivante" />
+    <TypingTitle text="votre présence digitale,\f une vitrine captivante" />
     <AgencyPresentation {...presentation} />
     <AgencyOneService oneService={oneService} />
     <AgencySteps {...Steps} />
