--- a/src/pages/services/supports-imprimes.astro
+++ b/src/pages/services/supports-imprimes.astro
@@ -164,7 +164,7 @@ const PhotoCarrousel = [
 
 <Layout>
   <main>
-    <TypingTitle text="des solutions visuelles pour tous vos objectifs" />
+    <TypingTitle text="des solutions visuelles pour\f tous vos objectifs" />
     <AgencyPresentation {...presentation} />
     <AgencyOneService oneService={oneService} />
     <AgencySteps {...Steps} />
