--- a/src/components/AgencyClientsNumber.astro
+++ b/src/components/AgencyClientsNumber.astro
@@ -18,30 +18,30 @@ const { variant = 'light', zone = 'top' } = Astro.props;
   class={`py-32 flex flex-col items-center font-larken gap-8 ${variant == 'dark' ? 'text-white bg-marron_fonce' : ''}`}
 >
   <p class="text-3xl text-center"><span class="text-orange">+ 35 acteurs</span> accompagnés par Jolilot</p>
-  <div class="text-center text-base flex flex-col gap-2">
-    <p>
+  <div class="text-center text-sm flex flex-col gap-2 px-10">
+    <p class="flex flex-wrap gap-1 justify-center">
       <span id="text-orange">ARTISANS PEINTRES DÉCORATEURS</span> |
       <span id="text-orange">PHOTOGRAPHES</span> |
-      <span id="text-orange">PRODUCTEURS</span> |
+      <span id="text-orange">PRODUCTEURS</span>
     </p>
-    <p>
+    <p class="flex flex-wrap gap-1 justify-center">
       <span id="text-orange">CHAUFFAGISTE ÉCOLOGIQUE</span> |
       <span id="text-orange">PARC ANIMALIER</span> |
       <span id="text-orange">MAISONS DE VACANCES</span>
     </p>
-    <p>
+    <p class="flex flex-wrap gap-1 justify-center">
       <span id="text-orange">RÉFLEXOLOGUES</span> |
       <span id="text-orange">ARTISTES PEINTRES</span> |
       <span id="text-orange">INFIRMIÈRES LIBÉRALES</span> |
       <span id="text-orange">ASSOCIATIONS</span>
     </p>
-    <p>
+    <p class="flex flex-wrap gap-1 justify-center">
       <span id="text-orange">MÉDICALES</span> |
       <span id="text-orange">COMMUNNES</span> |
       <span id="text-orange">ASSOCIATIONS DE LOISIRS</span> |
       <span id="text-orange">COMPAGNIES DE THÉÂTRE</span>
     </p>
-    <p>
+    <p class="flex flex-wrap gap-1 justify-center">
       <span id="text-orange">HÔTELS</span> |
       <span id="text-orange">RESTAURANTS</span> |
       <span id="text-orange">ESTHÉTICIENNES</span> |
