--- a/src/layouts/ScrollToTop.astro
+++ b/src/layouts/ScrollToTop.astro
@@ -6,21 +6,27 @@
     "
   >
     <svg
-      fill="currentColor"
-      height="20px"
-      width="20px"
       version="1.1"
-      id="Layer_1"
       xmlns="http://www.w3.org/2000/svg"
-      viewBox="0 0 330 330"
+      xmlns:xlink="http://www.w3.org/1999/xlink"
+      x="0px"
+      y="0px"
+      viewBox="0 0 256 256"
+      enable-background="new 0 0 256 256"
       xml:space="preserve"
+      width="20px"
+      height="20px"
     >
-      <path
-        id="XMLID_224_"
-        d="M325.606,229.393l-150.004-150C172.79,76.58,168.974,75,164.996,75c-3.979,0-7.794,1.581-10.607,4.394
-l-149.996,150c-5.858,5.858-5.858,15.355,0,21.213c5.857,5.857,15.355,5.858,21.213,0l139.39-139.393l139.397,139.393
-C307.322,253.536,311.161,255,315,255c3.839,0,7.678-1.464,10.607-4.394C331.464,244.748,331.464,235.251,325.606,229.393z"
-      ></path>
+      <g
+        ><g
+          ><g
+            ><path
+              fill="currentColor"
+              d="M66.5,120.3c-44.1,44.1-56.1,56.4-56.4,58c-0.5,2.3,1,5.7,2.9,6.7c0.7,0.3,2.4,0.6,3.8,0.6c2.4,0,3.8-1.4,55.3-52.9L125,80l55.8,55.8c51.3,51.3,56,55.8,57.9,55.8c1.2,0,2.9-0.4,4-0.9c2.7-1.4,4.2-5.8,2.7-8.1c-0.3-0.5-26.9-27.3-59.2-59.5c-58.3-58.3-58.7-58.7-61.2-58.7C122.4,64.4,122.1,64.7,66.5,120.3z"
+            ></path></g
+          ></g
+        ></g
+      >
     </svg>
   </button>
 </div>
