Add SEO data and fix changes

--- a/src/components/AgencyPresentation.astro
+++ b/src/components/AgencyPresentation.astro
@@ -19,7 +19,7 @@ export type PresentationProps = {
   color?: string;
   buttons?: {
     text: string;
-    url: string;
+    url?: string;
     variant: 'orange' | 'dark' | 'light';
   }[];
 };
