--- a/src/layouts/SubFooter.astro
+++ b/src/layouts/SubFooter.astro
@@ -27,7 +27,10 @@ const PostsInstagram = [
   <div class="flex w-full max-w-7xl flex-col gap-7">
     <div class="grid grid-cols-1 xl:grid-cols-3 gap-4 px-10 items-center">
       <div class="flex flex-col items-center text-center">
-        <p class="font-larken text-3xl">suivre toute l'actualité jolilot</p>
+        <div class="font-larken text-3xl flex gap-2 flex-wrap justify-center">
+          <p>suivre toute</p>
+          <p>l'actualité jolilot</p>
+        </div>
         <p>@jolilot.atelier</p>
       </div>
       <div
@@ -65,9 +68,9 @@ const PostsInstagram = [
       </div>
     </div>
     <div
-      class="text-center flex justify-evenly border-t border-black/90 pt-10 md:flex-row flex-col items-center gap-y-2"
+      class="text-center flex justify-evenly border-t border-black/90 pt-10 md:flex-row flex-col items-center gap-y-6"
     >
-      <div class="flex gap-6 flex-wrap justify-center">
+      <div class="flex gap-2 flex-wrap justify-center w-full">
         <p>© 2023 Jolilot Atelier | Lucie Arcoutel</p>
         <p>
           <a href="/mentions-legales" class="hover:text-orange">Mentions légales</a> | <a
@@ -77,7 +80,7 @@ const PostsInstagram = [
         </p>
       </div>
       <a href="/" aria-label="Retour a la page d'accueil" class="max-sm:order-3"><LogoIcon classes="w-[100px]" /></a>
-      <div class="flex items-center gap-4 justify-center flex-wrap">
+      <div class="flex items-center gap-4 justify-center flex-wrap w-full">
         <p>
           Cette année Jolilot soutient l’association <a
             href="https://aftc-lot.fr/"
