--- a/src/pages/a-propos.astro
+++ b/src/pages/a-propos.astro
@@ -20,12 +20,10 @@ const presentation: Props = {
   buttons: [
     {
       text: 'Graphiste',
-      url: '/contact#contact-form',
       variant: 'orange',
     },
     {
       text: 'Designer Web',
-      url: '/contact#contact-form',
       variant: 'light',
     },
   ],
@@ -82,7 +80,7 @@ const Steps: AgencyStepsProps = {
 };
 ---
 
-<Layout>
+<Layout title="L'Atelier">
   <main>
     <TypingTitle />
     <AgencyPresentation {...presentation} />
