--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -17,7 +17,7 @@ const presentation: Props = {
 };
 ---
 
-<Layout>
+<Layout title="Contact">
   <main>
     <TypingTitle />
     <AgencyPresentation {...presentation} />
