--- a/src/pages/services/contenu-digital.astro
+++ b/src/pages/services/contenu-digital.astro
@@ -95,7 +95,7 @@ const PhotoCarrousel = [
 ];
 ---
 
-<Layout>
+<Layout title="Contenu Digital">
   <main>
     <TypingTitle text="créons un contenu percutant" />
     <AgencyPresentation {...presentation} />
