--- a/src/pages/services/identite-visuelle.astro
+++ b/src/pages/services/identite-visuelle.astro
@@ -148,7 +148,7 @@ const PhotoCarrousel = [
 ];
 ---
 
-<Layout>
+<Layout title="Identité de marque">
   <main>
     <TypingTitle text="marquons ensemble votre identité" />
     <AgencyPresentation {...presentation} />
