--- a/src/pages/services/site-web.astro
+++ b/src/pages/services/site-web.astro
@@ -153,7 +153,7 @@ const PhotoCarrousel = [
 ];
 ---
 
-<Layout>
+<Layout title="Site web Vitrine">
   <main>
     <TypingTitle text="votre présence digitale,\f une vitrine captivante" />
     <AgencyPresentation {...presentation} />
