--- a/src/layouts/LayoutMd.astro
+++ b/src/layouts/LayoutMd.astro
@@ -4,7 +4,7 @@ import Layout from './Layout.astro';
 
 <Layout>
   <div class="flex justify-center pt-20 pb-10">
-    <article class="prose w-full max-w-5xl">
+    <article class="prose prose-zinc w-full max-w-6xl px-14 prose-headings:font-larken">
       <slot />
     </article>
   </div>
