--- a/src/pages/services/conseil-suivi.astro
+++ b/src/pages/services/conseil-suivi.astro
@@ -97,7 +97,7 @@ const PhotoCarrousel = [
 ];
 ---
 
-<Layout>
+<Layout title="Conseil & Suivi">
   <main>
     <TypingTitle />
     <AgencyPresentation {...presentation} />
