--- a/src/pages/services/supports-imprimes.astro
+++ b/src/pages/services/supports-imprimes.astro
@@ -162,7 +162,7 @@ const PhotoCarrousel = [
 ];
 ---
 
-<Layout>
+<Layout title="Supports Imprimés">
   <main>
     <TypingTitle text="des solutions visuelles pour\f tous vos objectifs" />
     <AgencyPresentation {...presentation} />
