--- a/src/layouts/LayoutMd.astro
+++ b/src/layouts/LayoutMd.astro
@@ -1,8 +1,9 @@
 ---
 import Layout from './Layout.astro';
+const { frontmatter } = Astro.props;
 ---
 
-<Layout>
+<Layout title={frontmatter.title}>
   <div class="flex justify-center pt-20 pb-10">
     <article class="prose prose-zinc w-full max-w-6xl px-14 prose-headings:font-larken">
       <slot />
