Change site description SEO

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -17,7 +17,7 @@ const { title } = Astro.props;
     <meta charset="UTF-8" />
     <meta
       name="description"
-      content="Que vous ayez besoin de supports imprimés, de sites vitrines, d’identités de marque ou de contenu digital, Jolilot Atelier est là pour vous accompagner."
+      content="Jolilot Atelier est une agence créative basée dans le Lot(46), en Occitanie. Spécialisée dans le graphisme et la communication print & digitale."
     />
     <meta
       name="keywords"
